# noita-eye-puzzle-scratchpad

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.claude/: settings.json
.claude/hooks/: cargo-run-quiet.sh  commit-bypass-guard.sh  protected-files-advisory.sh  stop-nudge.sh  tidy-on-edit.sh
.codex/: hooks.json
.codex/hooks/: pre-tool-use.sh  protected-files.sh  stop-reminder.sh  tidy-edited-file.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/deslop/: 00-OVERVIEW.md  01-publish-blockers.md  02-file-decomposition.md  03-duplication-and-readability.md  04-structure-and-api.md
docs/refactor/: 00-OVERVIEW.md  01-golden-master-safety-net.md  02-cipher-trait.md  03-external-ingest.md  04-solve-pipeline.md  04a-codec-transduction.md  05-null-experiment-harness.md  06-dissolve-report.md  07-split-godfiles-layout.md  07a-split-gak-godfile.md  07b-role-directory-layout.md  08-cli-registry.md  09-file-size-ratchet.md  10-split-solve-godfile.md
research/: 01-overview.md  02-theories-and-encoding.md  03-confirmed-vs-speculation.md  04-game-data-and-tooling.md  05-code-investigations.md  06-sources.md  07-workbench-bridge.md  HANDOFF-2026-06-26-post-T1.md  NEXT-STEPS.md  README.md  attack-methodology.md  frontier.md  threads-eyes.md  threads-proving-ground.md
research/data/: code-testable.json  crcscan-default-wordlist.md  crcscan-default-wordlist.txt  facts.json  sources.json  verdicts.json
research/findings/: T1-heldout-gate-fix.md  agl-exclusion.md  base5-first-trigram.md  community-docs-firsthand-digest.md  crc-stored-word-scan.md  ctak-feedback-discriminator.md  eyes-structural-summary.md  key-difference-discriminator.md  modular-form-exclusion-ledger.md  predicate-battery-meta-analysis.md  two-original-generator-roundtrip-blocker.md  two-pair-ic-class-ranking.md  two-shadowfinish-substitution-candidate.md
research/gak-threads/: G1-RESULTS.md  G1b-RESULTS.md  G2-isomorph-imperfection.md  G3-leak-ceiling.md  MORNING-SUMMARY.md  OVERNIGHT-HANDOFF.md  PROGRESS.md  README.md  thread-1-dihedral-and-transitivity.md  thread-2-agl-stress-test.md  thread-3-perfect-isomorphism-scan.md  thread-4-gak-attack-prototype.md  thread-5-chaining-graph.md  thread-6-binary-game-data.md
research/handoff/: README.md  T00-refresh-next-steps.md  T01-perturbation-harness.md  T02-agl-robustness.md  T03-perfectiso-stutter-robustness.md  T04-d166-robustness.md  T05-structural-summary-publish.md  T06-certification-degree-appendix.md  T07-proving-ground-status-and-leads.md  T11-external-anchor-hunt.md  T12-cli-instrument-refactor.md  gak-general-solver.md  lymm-feedback-2026-07-06.md  next-cycle-2026-07-06.md  one-codec-attack.md  orchestrator-handoff-groupscan-and-threads.md  two-crib-free-finish-plan.md  two-cross-agent-recon.md  two-fresh-avenues.md  two-pairclass-aprime-reform.md  two-pairclass-attack.md  two-post-avenue-a-handoff.md
scripts/: blob-size-allowlist.txt  check-blob-size.sh  check-file-size.sh  check-suppressions.sh  cubemorse_reference.py  file-size-allowlist.txt  file-size-debt-log.jsonl  suppression-register.txt
scripts/ai-hooks/: cargo-run-quiet.sh  commit-bypass-guard.sh  common.sh  protected-files-advisory.sh  stop-nudge.sh  tidy-on-edit.sh
scripts/tests/: test-ai-hooks.sh  test-blob-size.sh  test-cargo-run-quiet.sh  test-cubemorse-reference.sh  test-fast-commit.sh  test-file-size.sh  test-precommit-guards.sh  test-suppressions.sh  test-tidy-on-edit.sh
src/: agl_gak.rs  analysis.rs  chaining.rs  chaining_graph.rs  cipher_attack.rs  ciphers.rs  codec.rs  conditional_structure.rs  controls.rs  corpus.rs  dof_null.rs  gak_attack.rs  generator.rs  glyph.rs  grouping.rs  honeycomb.rs  isomorph.rs  isomorph_null.rs  keystream.rs  language.rs  lib.rs  main.rs  modular_diff.rs  null.rs  orders.rs  orientation_homogeneity.rs  perfect_isomorphism.rs  periodicity.rs  perseus.rs  pipeline_null.rs  pyry_conditions.rs  quadgram.rs  report.rs  solve.rs  transitivity.rs  tree_residual.rs  trigram.rs  zero_adjacency_null.rs
src/analysis/: analysis.rs  chaining.rs  chaining_graph.rs  chaining_graph_tests.rs  first_trigram.rs  grouping.rs  honeycomb.rs  isomorph.rs  isomorph_imperfection.rs  leak_ceiling.rs  mod.rs  orders.rs  perfect_isomorphism.rs  perturbation.rs
src/attack/: agl_gak.rs  cipher_attack.rs  codec.rs  crack.rs  keystream.rs  language.rs  mod.rs  polyshift.rs  profile.rs  quadgram.rs  ragbaby.rs  solve.rs  substitution.rs
src/ciphers/: error.rs  keys_gak.rs  keys_simple.rs  mechanics.rs  mod.rs  tests.rs  transforms.rs  validation.rs
src/cli/: args.rs  args_analysis.rs  args_attack.rs  args_bigramcodec.rs  args_codecpower.rs  args_cribfit.rs  args_ctak.rs  args_cubemorse.rs  args_gak_hidden_base.rs  args_gak_swap.rs  args_isomap.rs  args_maskdecode.rs  args_mdlcodec.rs  args_pairclass.rs  args_polyshift.rs  args_predicates.rs  args_rankcodec.rs  args_rlcodec.rs  args_shadowfinish.rs  args_shadowpairic.rs  args_shadowsearch.rs  args_substfinish.rs  dispatch.rs  mod.rs  shared.rs
src/core/: glyph.rs  ingest.rs  math.rs  mod.rs  trigram.rs
src/data/: corpus.rs  generator.rs  mod.rs
src/experiments/: conditional_structure.rs  controls.rs  mod.rs  modular_diff.rs  orientation_homogeneity.rs  periodicity.rs  pyry_conditions.rs  transitivity.rs
src/gak_attack/: error.rs  (+3 more)
tests/: agl_gak_cli.rs  basic_cli.rs  chaining_cli.rs  chaining_graph_cli.rs  cipherattack_cli.rs  conditional_cli.rs  controls_cli.rs  cubemorse_cli.rs  first_trigram.rs  gak_attack_cli.rs  gak_hidden_base_cli.rs  gak_swap_recover_cli.rs  golden_master.rs  grouping_cli.rs  honeycomb_cli.rs  isomap_cli.rs  modular_diff_cli.rs  nulls_cli.rs  orientation_homogeneity_cli.rs  pairclass_cli.rs  perfect_isomorphism_cli.rs  periodicity_cli.rs  perseus_cli.rs  polyshift_cli.rs  pyry_conditions_cli.rs  shadowsearch_cli.rs  solve_cli.rs  transitivity_cli.rs  tree_residual_cli.rs
(+491 files in other folders)
