[package]
name = "noita-eye-puzzle"
version = "0.1.0"
edition = "2024"
description = "Tools for analyzing and attempting to decode the Noita eye-glyph puzzle."
license = "MIT OR Apache-2.0"
readme = "README.md"
autobins = false

[[bin]]
name = "noita-eye"
path = "src/main.rs"

[lib]
name = "noita_eye_puzzle"
path = "src/lib.rs"

[dependencies]
# Network access to crates.io was unavailable when this repo was initialized,
# so the crate is std-only for now. Add these (and run `cargo build` once
# online) as the work needs them:
#   clap       = { version = "4", features = ["derive"] }  # CLI parsing
#   rayon      = "1"                                        # data-parallel search
#   serde      = { version = "1", features = ["derive"] }  # (de)serialize corpora
#   serde_json = "1"
#   anyhow     = "1"                                        # error handling

[dev-dependencies]
#   proptest = "1"   # property-based tests for any codecs we add

# --- Guardrails -------------------------------------------------------------
# `unsafe` is never needed for this puzzle work, so forbid it outright.
# Every public item must be documented. CI runs clippy with `-D warnings`, so
# these "warn" levels become hard errors in CI while staying non-blocking
# locally.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Numeric casts in statistics are intentional and bounded.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
