[package]
name = "noita-eye-puzzle"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
description = "Tools for analyzing and attempting to decode the Noita eye-glyph puzzle."
license = "MIT OR Apache-2.0"
readme = "README.md"
autobins = false

[[bin]]
name = "noita-eye"
path = "src/main.rs"

[lib]
name = "noita_eye_puzzle"
path = "src/lib.rs"

[dependencies]
# Vetted, minimal external crates are allowed. The supply chain is gated by
# `cargo-deny`, and lockfile changes must be deliberate. The in-crate
# `SplitMix64` PRNG remains for reproducible null models, not because crates.io
# is unavailable.
# Pure-Rust CDCL backend for the GAK swap-recovery residual CSP; kept behind a
# small module boundary so Task-03 can replace it with MITM or a stronger solver.
batsat = { version = "0.6.0", default-features = false }
clap = { version = "4.5.4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
statrs = { version = "0.18.0", default-features = false }

[dev-dependencies]
# Add dev tooling only when it carries its weight; `cargo-deny` and
# `cargo-machete` should stay green after every dependency change.
#   proptest = "1"   # property-based tests for any codecs we add

# --- Guardrails -------------------------------------------------------------
# `unsafe` is never needed for this puzzle work, so forbid it outright.
# Every public item must be documented. CI runs clippy with `-D warnings`, so
# these "warn" levels become hard errors in CI while staying non-blocking
# locally.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
# A silently-dropped Result is a real correctness hazard in puzzle code.
unused_results = "warn"

[lints.clippy]
# Groups (negative priority so the specific lints below win).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Numeric casts in statistics are intentional and bounded.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"

# Panics / silent failures: a mis-handled edge case must surface, not hide.
# (`clippy.toml` relaxes the unwrap/panic family inside tests.)
unwrap_used = "warn"
get_unwrap = "warn"
panic = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
string_slice = "warn"
unused_result_ok = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"

# Numeric-correctness lints that matter for a bit/byte cipher solver.
float_cmp = "warn"
lossy_float_literal = "warn"

# Hygiene.
wildcard_imports = "warn"
allow_attributes_without_reason = "warn"

[profile.release]
lto = true
codegen-units = 1
